<resources>
    <string name="app_name">Dota Tracker</string>

    <string name="dialog_action_ok">OK</string>
    <!--<string name="dialog_action_cancel">Cancel</string>-->
    <string name="dialog_error_title">Sorry</string>

    <!-- Detail Activity -->
    <!--<string name="text_pokemon_id">Id: %s</string>-->
    <!--<string name="text_pokemon_name">Name: %s</string>-->
    <!--<string name="text_pokemon_experience">Experience: %s</string>-->


    <!-- Tab Layout -->
    <string name="tab_home">Home</string>
    <string name="tab_feed">Activity Feed</string>


    <!-- Error View -->
    <string name="error_title">Oops</string>
    <string name="error_message">There was a problem loading the requested information, please try again!</string>
    <string name="error_reload">Reload</string>
    <string name="title_activity_maps_sample">Map</string>
    <string name="error_something_bad_happened">Something bad happened. Please try again.</string>

    <!-- Account Fragment -->
    <string name="user_name">User Name</string>
    <string name="win_percentage_title">Win %</string>
    <string name="win_percentage_data">%f%%</string>
    <string name="most_played_hero">Most Played Heroes</string>


    <!-- Hero Item -->
    <string name="hero_placeholder">Windrunner</string>
    <string name="games_played">Games Played: %s</string>
    <string name="games_won">Games Won: %s</string>
    <string name="win_percentage">Win%: %s</string>
</resources>
