<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/accountRelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/profileImageBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/border_profile_picture"
        android:padding="5dp">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:elevation="10dp"
            android:onClick="secretTap"
            android:src="@drawable/steam_icon" />
    </LinearLayout>

    <TextView
        android:id="@+id/frag_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImageBorder"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/user_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/seveText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/winPercentageTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frag_userName"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/win_percentage_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:typeface="monospace" />


    <io.netopen.hotbitmapgg.library.view.RingProgressBar
        android:id="@+id/winRingProgressBar"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_below="@id/winPercentageTitle"
        android:layout_centerHorizontal="true"
        app:max="100"
        app:ringColor="@color/red"
        app:ringProgressColor="@color/green"
        app:ringWidth="10dp"
        app:style="STROKE"
        app:textIsShow="false" />

    <TextView
        android:id="@+id/winPercentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mostPlayedHeroesText"
        android:layout_below="@id/winPercentageTitle"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/win_percentage_data"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="monospace" />


    <TextView
        android:id="@+id/mostPlayedHeroesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/winRingProgressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/most_played_hero"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</RelativeLayout>